# gap-terraform-mcp-server

./: Dockerfile  README.md  pyproject.toml  run.sh  test.py
src/gcp_terraform_mcp_server/: main.py  models.py
src/gcp_terraform_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gcp_terraform_mcp_server/handlers/: checkov_handlers.py  gcp_best_practices_handlers.py  gcp_provider_handlers.py  genai_modules_handlers.py  terraform_registry_handlers.py  terraform_workflow_handlers.py
