[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-terraform-mcp-server"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "MCP server for Terraform on GCP best practices, infrastructure as code patterns, and security compliance with Checkov"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.104.0",
    "fastmcp>=0.1.3",
    "pydantic>=2.4.2",
    "python-jose>=3.3.0",
    "checkov>=2.5.0",
    "uvicorn>=0.24.0.post1",
    "python-terraform>=0.10.1",
    # Replaced pygcp with available version
    "pygcp==0.0.1",
    "google-cloud-storage>=2.12.0",
    "google-cloud-compute>=1.14.1",
    "jsonschema>=4.19.1",
    "httpx>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.10.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[project.scripts]
gcp-terraform-mcp-server = "gcp_terraform_mcp_server.main:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.urls]
"Documentation" = "https://github.com/yourusername/gcp-terraform-mcp-server/docs"
"Source" = "https://github.com/yourusername/gcp-terraform-mcp-server"
"Bug Tracker" = "https://github.com/yourusername/gcp-terraform-mcp-server/issues"